# dataprep

./: dev-notes.md  index.html  pyproject.toml
src/datapill/cli/: cmd_export.py  cmd_ingest.py  cmd_preprocess.py  cmd_profile.py  main.py
src/datapill/features/export/: pipeline.py  template.py
src/datapill/features/preprocess/: pipeline.py
src/datapill/features/preprocess/ops/: __init__.py  compose.py  parse.py  reshape.py  transform.py
