[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datapill"
version = "0.2.9"
description = "A modular data preparation CLI for ingestion, profiling, classification, preprocessing, and export pipelines"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"

authors = [
    { name = "Tran Quang Minh" }
]

keywords = ["data", "etl", "pipeline", "cli", "data-engineering"]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "platformdirs>=4.0.0",
    "polars>=1.0.0",
    "pyarrow>=16.0.0",
    "numpy>=1.26.0",
    "asyncpg>=0.29.0",
    "aiomysql>=0.2.0",
    "asyncmy>=0.2.9",
    "aiosqlite>=0.19.0",
    "connectorx>=0.3.3",
    "duckdb>=1.0.0",
    "aioboto3>=12.0.0",
    "aiokafka>=0.11.0",
    "aiohttp>=3.9.0",
    "aiofiles>=23.0.0",
    "aio-pika>=9.4.0",
    "pydantic>=2.0.0",
    "anyio>=4.0.0",
    "openpyxl>=3.1.0",
    "xlsxwriter>=3.2.0",
    "fastexcel>=0.11.0",
    "fastavro>=1.9.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "psutil>=5.9.0",
    "cryptography>=42.0.0",
    "RestrictedPython>=8.1",
    "scikit-learn>=1.4.0",
    "scipy>=1.11.0",
    "fastembed>=0.3.0",
    "pytz>=2024.1",
    "playwright>=1.44.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-httpserver>=1.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
dp = "datapill.cli.main:app"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: mark test as requiring Docker services",
]

[tool.hatch.build.targets.wheel]
packages = ["src/datapill"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]